--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,6 @@
 ---
 import "../styles/global.css";
+import "katex/dist/katex.css";
 import ThemeSwitcher from "../components/ThemeSwitcher.astro";
 
 const { title = "Xie's Island" } = Astro.props;
